RESOLVED FIXED226380
Hit-testing does not account for clip-path on <iframe>
https://bugs.webkit.org/show_bug.cgi?id=226380
Summary Hit-testing does not account for clip-path on <iframe>
Antoine Quint
Reported 2021-05-28 09:43:09 PDT
Hit-testing does not account for clip-path on <iframe>
Attachments
Patch (13.43 KB, patch)
2021-05-28 09:47 PDT, Antoine Quint
no flags
Patch (13.42 KB, patch)
2021-05-29 10:51 PDT, Antoine Quint
no flags
Patch (13.43 KB, patch)
2021-06-01 02:14 PDT, Antoine Quint
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2021-05-28 09:43:47 PDT
Antoine Quint
Comment 2 2021-05-28 09:47:20 PDT
Antoine Quint
Comment 3 2021-05-28 09:47:26 PDT
Antoine Quint
Comment 4 2021-05-29 10:51:06 PDT
Antoine Quint
Comment 5 2021-06-01 02:14:58 PDT
Antti Koivisto
Comment 6 2021-06-01 08:46:36 PDT
Comment on attachment 430241 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430241&action=review > LayoutTests/css3/masking/clip-path-iframe.html:9 > + if (window.eventSender) > + eventSender.mouseMoveTo(50, 50); This won't work on iOS. It would be better if the test was constructed so that all platforms are covered (and nothing happens case wouldn't pass). You can exercise hit testing code directly in platform independent manner by using Document.elementFromPoint.
Antti Koivisto
Comment 7 2021-06-01 08:50:48 PDT
Comment on attachment 430241 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430241&action=review > LayoutTests/css3/masking/clip-path-iframe.html:15 > +iframe { I think this also affects replaced elements like <img>. It would be good to have a test for them too.
Antoine Quint
Comment 8 2021-06-02 01:28:50 PDT
Note You need to log in before you can comment on or make changes to this bug.