Hit-testing does not account for clip-path on <iframe> https://bugs.webkit.org/show_bug.cgi?id=226380 <rdar://problem/78621486>

Reviewed by Antti Koivisto.

Source/WebCore:

The logic to account for the clip-path property during hit-testing was only found in RenderBlock::nodeAtPoint()
although other types of RenderBox objects may need this, such as RenderIFrame. So we move some of the logic
from RenderBlock::nodeAtPoint() to dedicated methods on RenderBox such that RenderBox::nodeAtPoint() may call them
but also allow for RenderBlock::nodeAtPoint() to call them.

Test: css3/masking/clip-path-hit-test-iframe.html
      css3/masking/clip-path-hit-test-img.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::nodeAtPoint):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::hitTestVisualOverflow const):
(WebCore::RenderBox::hitTestClipPath const):
(WebCore::RenderBox::hitTestBorderRadius const):
(WebCore::RenderBox::nodeAtPoint):
* rendering/RenderBox.h:

LayoutTests:

Add a new test which checks that we hit-test correctly in part of an
<iframe> or <img> clipped by the clip-path property.

* css3/masking/clip-path-hit-test-iframe-expected.txt: Added.
* css3/masking/clip-path-hit-test-iframe.html: Added.
* css3/masking/clip-path-hit-test-img-expected.txt: Added.
* css3/masking/clip-path-hit-test-img.html: Added.

Canonical link: https://commits.webkit.org/238375@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278343 268f45cc-cd09-0410-ab3c-d52691b4dbfc